[package]
version = "0.1.2"

name = "fast-floats"
license = "MIT/Apache-2.0"
authors = ["bluss"]

repository = "https://github.com/bluss/fast-floats"
documentation = "https://docs.rs/fast-floats/"

readme = "README-crates.io.md"
description = "Fast-math wrappers for floats; experimental and unstable; for experiments."

keywords = []
categories = []

edition = "2018"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"